Fix rendering in sidebar on mobile. Fixes #3246
Conflicts:
	app/view/css/bolt-old-ie.css
	app/view/css/bolt.css
	app/view/sass/nav/_secondary.scss

--- a/app/view/sass/nav/_secondary.scss
+++ b/app/view/sass/nav/_secondary.scss
@@ -128,7 +128,8 @@
         display: block;
         text-indent: -$nav-secondary-indent;
         font-weight: normal;
-        max-height: 3.7em;
+        max-height: 4.8em;
+        cursor: pointer;
     }
 
     a.menu-pop {
